frontend/src/Home.css
.navbar a{
    padding: 0 10px;
}

.top-section {
    width: 100%;
}

.cover-img {
    object-fit: cover;
    width: 100%;
    height: 50vh;
}

.carousel button a{
    color: inherit;
}

.intro {
    padding: 20px 40px;
    font-family: 'Montagu Slab', serif;
}

.social{
    font-size: 40px;
    padding: 10px;
}

a{
    color: gray;
    text-decoration: none;
}

a:hover{
    color: black;
}

.item {
  border: 2px solid rgb(240, 240, 240);
  padding: 7px;
}
.item h6 {
  text-transform: none;
  margin: 0;
}
.item .content {
  color: gray;
  margin-top: 5px;
  margin-bottom: 0;
}
.item header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  cursor: pointer;
}

.about .top-section{
    background: url('./img/img-1.jpeg');
    min-height: 92vh;
    padding: auto;
    display: flex;
    align-items: center;
    justify-content: center;
}

.panel{
    width: 50vw;
    margin: 20px 0;
    background-color: rgb(255, 255, 255, 0.5);
    padding: 5vh 5vw;
}

.panel h2{
    text-align: center;
}

.panel p{
    color: black;
}

.services .icons:hover{
    filter: drop-shadow(0 5px 5px black);
}

footer .services{
    display: flex;
    justify-content: space-between;
    align-items: center;
}

footer .services .icons{
    width: 75px;
}

footer .sitemap{
    text-align: right;
}

.hours{
    white-space: pre;
}

.hypertext{
    text-decoration: underline;
    font-weight: 500;
    color: blue;
}

/************************************************** Bootstrap col-md */
@media only screen and (max-width: 991px) {
    .panel{
        width: 90vw;
    }
    
    footer .logo{
        text-align: left;
    }

    footer .storeinfo{
        text-align: right;
    }

    
}

/************************************************** Bootstrap col-sm */
@media only screen and (max-width: 767px) {

    footer .logo{
        display: none;
    }

    footer .container .col{
        text-align: center;
        padding-bottom: 5%;
    }
}

